feat: Introduce CookedNames dependency
Introduce CookedNames as an dependency to prevent excessive use of ternaries and refactor the component class name logic to leverage the dependencies ability.

--- a/src/atoms/buttons/styling.scss
+++ b/src/atoms/buttons/styling.scss
@@ -12,11 +12,11 @@
     background-color: $grey-light;
   }
 
-  &.button-round {
+  &.rounded {
     border-radius: $radius-rounded;
   }
 
-  &.button-accent {
+  &.accent {
     background-color: $accent-2;
   }
 }
