refactor: Rename RadioButton to Radio
\#5

--- a/src/atoms/radio/styling.scss
+++ b/src/atoms/radio/styling.scss
@@ -1,6 +1,6 @@
 @import "../../sass/variables.scss";
 
-.ch-radio-button {
+.ch-radio {
   display: flex;
   width: calc(100% - $size-7 - $size-7);
   cursor: pointer;
