--- a/src/radio/styling.scss
+++ b/src/radio/styling.scss
@@ -10,7 +10,7 @@
     appearance: none;
     max-height: 23px;
     padding: .2rem .32rem;
-    margin: -.5px $size-7 0 0;
+    margin: -3px $size-7 0 0;
     background-color: $white;
     border: 1px solid $grey-lighter;
     border-radius: $radius-rounded;
