feat: Add horizontal alignment of radio-group items

--- a/src/radio/styling.scss
+++ b/src/radio/styling.scss
@@ -53,3 +53,17 @@
     }
   }
 }
+
+.ch-radio-group {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+
+  &.horizontal {
+    flex-direction: row;
+
+    & > .ch-radio {
+      flex-grow: 1;
+    }
+  }
+}
