style: Horizontal center checkbox mark

--- a/src/checkbox/styling.scss
+++ b/src/checkbox/styling.scss
@@ -14,7 +14,7 @@
     padding: 1px 3px;
     border: 1px solid $grey-lighter;
     border-radius: $radius;
-    margin-right: $size-7;
+    margin: -3px $size-7 0 0;
     background-color: $white;
 
     &:checked {
