--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -21,11 +21,10 @@ $blue:         hsl(217, 71%,  53%) !default;
 $purple:       hsl(271, 100%, 71%) !default;
 $red:          hsl(348, 100%, 61%) !default;
 
-$primary:         #E27D60;
-$secondary:       #85CDCB;
-$primary-lighter: #E8A87C;
-$accent:          #C38D9E;
-$accent-2:        #41B3A4;
+$primary:         #3f72af;
+$secondary:       #112d4e;
+$accent:          #f9f7f7;
+$accent-2:        #dbe2ef;
 
 $family-sans-serif: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default;
 $family-monospace: monospace !default;
