--- a/src/checkbox/styling.scss
+++ b/src/checkbox/styling.scss
@@ -1,7 +1,7 @@
 @import "../sass/variables.scss";
 
 .ch-checkbox {
-  width: calc(100% - $size-7 - $size-7);
+  width: calc(100% - #{$size-7 + $size-7});
   display: flex;
   cursor: pointer;
   padding: $size-6 $size-7;
