--- a/src/radio/styling.scss
+++ b/src/radio/styling.scss
@@ -2,7 +2,7 @@
 
 .ch-radio {
   display: flex;
-  width: calc(100% - $size-7 - $size-7);
+  width: calc(100% - #{$size-7 + $size-7});
   cursor: pointer;
   padding: $size-6 $size-7;
 
