--- a/src/checkbox/styling.scss
+++ b/src/checkbox/styling.scss
@@ -2,7 +2,6 @@
 
 .ch-checkbox {
   width: calc(100% - #{$size-7 + $size-7});
-  display: flex;
   cursor: pointer;
   padding: $size-6 $size-7;
   overflow-wrap: break-word;
@@ -24,7 +23,7 @@
 
     &:before {
       content: "\2713";
-      font-size: 1rem;
+      font-size: $size-6;
       font-weight: bold;
       color: $white;
       opacity: 0;
@@ -46,16 +45,6 @@
 
     input[type="checkbox"]:checked:before {
       color: $grey-dark;
-    }
-  }
-
-  &.reversed {
-    flex-direction: row-reverse;
-    justify-content: space-between;
-
-    input[type="checkbox"] {
-      margin-right: 0;
-      margin-left: $size-7;
     }
   }
 }
