--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -21,22 +21,10 @@ $blue:         hsl(217, 71%,  53%) !default;
 $purple:       hsl(271, 100%, 71%) !default;
 $red:          hsl(348, 100%, 61%) !default;
 
-$primary:         #3f72af;
-$secondary:       #112d4e;
-$accent:          #f9f7f7;
-$accent-2:        #dbe2ef;
-
-$family-sans-serif: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default;
-$family-monospace: monospace !default;
-$render-mode: optimizeLegibility !default;
-
-$text: $grey-dark !default;
-$family-primary: $family-sans-serif !default;
-$family-secondary: $family-sans-serif !default;
-$family-code: $family-monospace !default;
-$family-monospace: monospace !default;
-$render-mode: optimizeLegibility !default;
-$font-family: $family-primary !default;
+$primary:         #3f72af !default;
+$secondary:       #112d4e !default;
+$accent:          #f9f7f7 !default;
+$accent-2:        #dbe2ef !default;
 
 $size-1: 3rem !default;
 $size-2: 2.5rem !default;
@@ -52,45 +40,7 @@ $weight-medium: 500 !default;
 $weight-semibold: 600 !default;
 $weight-bold: 700 !default;
 
-$block-spacing: 1.5rem !default;
-
 $radius-small: 2px !default;
 $radius: 4px !default;
 $radius-large: 6px !default;
 $radius-rounded: 290486px !default;
-
-$body-background-color: $white !default;
-$background: $white !default;
-$body-size: 16px !default;
-$body-min-width: 300px !default;
-$body-rendering: optimizeLegibility !default;
-$body-family: $family-primary !default;
-$body-overflow-x: hidden !default;
-$body-overflow-y: scroll !default;
-
-$body-color: $text !default;
-$body-font-size: 1em !default;
-$body-weight: $weight-normal !default;
-$body-line-height: 1.5 !default;
-
-$code-family: $family-code !default;
-$code-padding: 0.25em 0.5em 0.25em !default;
-$code-weight: normal !default;
-$code-size: 0.875em !default;
-
-$small-font-size: 0.875em !default;
-$hr-background-color: $background !default;
-$hr-height: 2px !default;
-$hr-margin: 1.5rem 0 !default;
-
-$text: $grey-dark !default;
-$text-invert: findColorInvert($text) !default;
-$text-light: $grey !default;
-$text-strong: $grey-darker !default;
-
-$strong-color: $text-strong !default;
-$strong-weight: $weight-bold !default;
-
-$pre-font-size: 0.875em !default;
-$pre-padding: 1.25rem 1.5rem !default;
-$pre-code-font-size: 1em !default;
