style: Remove colon on CDL
Remove the color inserted on description list titles for compact description lists

--- a/src/description-list/styling.scss
+++ b/src/description-list/styling.scss
@@ -29,6 +29,12 @@
     display: flex;
     justify-content: space-between;
 
+    & > dt:last-of-type {
+      &:after {
+        content: "";
+      }
+    }
+
     & > dd {
       text-align: right;
     }
