--- a/src/input/styling.scss
+++ b/src/input/styling.scss
@@ -1,10 +1,11 @@
 @import "../sass/variables.scss";
 
 .ch-text-field {
-  width: calc(100% - #{$size-6 + $size-6} - 2px);
+  width: 100%;
   padding: $size-7 $size-6;
   border: 1px solid $grey-lighter;
   border-radius: $radius;
+  box-sizing: border-box;
 
   &.disabled {
     background-color: $accent;
