--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -33,6 +33,8 @@ $size-4: 1.5rem !default;
 $size-5: 1.25rem !default;
 $size-6: 1rem !default;
 $size-7: 0.75rem !default;
+$size-8: 0.5rem !default;
+$size-9: 0.25rem !default;
 
 $weight-light: 300 !default;
 $weight-normal: 400 !default;
