--- a/src/buttons/styling.scss
+++ b/src/buttons/styling.scss
@@ -13,6 +13,7 @@
   &.ch-primary-button {
     color: $white;
     border-color: $primary;
+    border-width: $size-9;
     background-color: $primary;
   }
 
@@ -20,13 +21,13 @@
     color: $secondary;
     border-width: $size-9;
     border-color: $secondary;
-    background-color: $accent;
+    background-color: transparent;
   }
 
   &.ch-tertiery-button {
-    background-color: $accent;
-    border-color: transparent;
     border-width: $size-9;
+    border-color: transparent;
+    background-color: transparent;
   }
 
   &:disabled {
